--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 
     <body>
         <h1> PastaLicious!</h1>
+        <p> Carbs are your best friend. Why not prove your friendship 
+            with some pasta! The best tasting way to get in your carbs
+            for the day!
+        </p>
+        <a href="./recipes/spaghetti.html">Spaghetti</a>
+        <a href="./recipes/ravioli.html">Ravioli</a>
+        <a href="./recipes/">Lasgana</a>
     </body>
 </html>
