Change body paragraph and add image

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 
     <body>
         <h1> PastaLicious!</h1>
-        <p> Carbs are your best friend. Why not prove your friendship 
-            with some pasta! The best tasting way to get in your carbs
-            for the day!
+        <p> What's better than a plate of delicious pasta? Making you're own delicious pasta at home!
+            Nothing beats a hot plate of delicious spaghetti or maybe a bowl of ravioli. Below are basic
+            recipes for some of the most popular pasta dishes! 
         </p>
         <a href="./recipes/spaghetti.html">Spaghetti</a>
         <a href="./recipes/ravioli.html">Ravioli</a>
         <a href="./recipes/">Lasgana</a>
+        <p></p>
+        <img src="./images/pasta-chef.jpg" alt="Chef holding a plate of spaghetti">
+
     </body>
 </html>
