Fix link for lasagna

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </p>
         <a href="./recipes/spaghetti.html">Spaghetti</a>
         <a href="./recipes/ravioli.html">Ravioli</a>
-        <a href="./recipes/">Lasgana</a>
+        <a href="./recipes/lasagna.html">Lasagna</a>
         <p></p>
         <img src="./images/pasta-chef.jpg" alt="Chef holding a plate of spaghetti">
 
