Add image, ingredients, and instructions

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -8,7 +8,36 @@
     <body>
         <h1> Classic Spaghetti </h1>
         <p>Who doesn't love the classics? This spaghetti dish is 
-            sure to get that tummy full!
+            sure to get that tummy full! And its super simple to make!
         </p>
+
+        <img src="../images/spaghetti.jpeg" alt="a plate of spaghetti">
+
+        <h2> Ingredients </h2>
+        <ul>
+            <li> Spaghetti noodles</li>
+            <li> salt</li>
+            <li> Store bought spaghetti sauce </li>
+            <li> Ground beef</li>
+            <li> whatever seasonings you enjoy!</li>
+        </ul>
+
+        <h2>Cooking Directions</h2>
+        <ol>
+            <li> Fill a large pot with water and some salt.
+                Bring to a boil.
+            </li>
+            <li> Once boiling add spaghetti noodles. Cook for
+                7-11 minutes until noodles are tender.
+            </li>
+            <li> Strain noodles and return to pot</li>
+            <li> Add ground beef to a large skillet and brown</li>
+            <li> Add whatever seasonings you like to ground beef
+                once its browned
+            </li>
+            <li> Once beef is cooked, add jar of spaghetti sauce and combine</li>
+            <li> Pour sauce into pot of spaghetti and combine</li>
+            <li> Enjoy with Parmesan cheese and bread!</li>
+        </ol>
     </body>
 </html>
