--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Classic Spaghetti</title>
+        <title>Lasagna</title>
     </head>
 
     <body>
