Add image, ingredients, and directions

--- a/recipes/ravioli.html
+++ b/recipes/ravioli.html
@@ -7,5 +7,37 @@
 
     <body>
         <h1>Ravioli</h1>
+
+        <img src="../images/ravioli.jpeg" alt="a plate of ravioli with a fork on the left">
+
+        <p></p>
+
+        <p> What's better than ground beef? Ground beef stuffed inside of pasta! This is a simple and yummy
+            recipe for making a plate of ravioli!
+        </p>
+
+        <p></p>
+
+        <h2>Ingredients</h2>
+
+        <ul>
+            <li>jar (25.5 oz) Muir Glen™ organic pasta sauce (any variety)</li>
+            <li>package (25 to 27 1/2 oz) frozen cheese-filled ravioli </li>
+            <li>cups shredded mozzarella cheese (8 oz) </li>
+            <li>tablespoons grated Parmesan cheese </li>
+        </ul>
+
+        <h3>Directions</h3>
+
+        <ol>
+            <li>Heat oven to 350°F. Spray bottom and sides of rectangular baking dish, 
+                13x9x2-inches, with cooking spray.</li>
+            <li>Spread 3/4 cup of the pasta sauce in baking dish. 
+                Arrange half of the frozen ravioli in single layer over sauce; top with half of the remaining pasta sauce and 1 cup of the mozzarella cheese. 
+                Repeat layers once, starting with ravioli. Sprinkle with Parmesan cheese. </li>
+            <li>Cover with foil; bake 40 minutes. Remove foil; bake 15 to 20 minutes or until bubbly and hot in center. 
+                Let stand 10 minutes before serving.</li>
+                
+        </ol>
     </body>
 </html>
