--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,45 @@
 
     <body>
         <h1>Lasagna</h1>
+
+        <img src="../images/lasagna.jpg" alt="a plate of lasagna">
+
+        <p></p>
+
+        <p> Nothing beats spaghetti. The beloved classic is definitely the king of the pasta world. But a close second
+            is lasagna! It's 5 layers of pasta-y goodness thats sure to please!
+        </p>
+
+        <h2> Ingredients</h2>
+
+        <ul>
+            <li>12 lasagna noodles uncooked</li>
+            <li>4 cups mozzarella cheese shredded and divided</li>
+            <li>½ cup parmesan cheese shredded and divided</li>
+        </ul>
+
+        <h3> Tomato Sauce</h3>
+
+        <ul>
+            <li>½ pound lean ground beef</li>
+            <li>½ pound Italian sausage</li>
+            <li>1 onion diced</li>
+            <li>2 cloves garlic minced</li>
+            <li>36 ounces pasta sauce </li>
+            <li>2 tablespoons tomato paste</li>
+            <li>1 teaspoon Italian seasoning</li>
+        </ul>
+
+        <h3> Cheese Mixture</h3>
+
+        <ul>
+            <li>2 cups ricotta cheese</li>
+            <li>¼ cup fresh parsley chopped</li>
+            <li>1 egg beaten</li>
+        </ul>
+
+        <h2> Cooking Directions</h2>
+
+        <ol></ol>
     </body>
 </html>
